src/objects/Event_Approval__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Attendee_Expenses__c</fullName>
        <label>Total Estimated Attendee Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Was_FEDROOMS_used_to_pick_event_venue__c</fullName>
        <label>Was FEDROOMS used to pick event venue?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Event Approval</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>EA_Event_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Stage__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Awards_Ceremony_With_Food</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_GSA_Sponsored_Conference</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Internal_Management_Meeting</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.Non_GSA_Sponsored_Conference</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Award_Ceremony</fullName>
        <columns>NAME</columns>
        <columns>Conference_Site__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Awards_Ceremony_With_Food</value>
        </filters>
        <filters>
            <field>EA_Stage__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Award Ceremony</label>
    </listViews>
    <listViews>
        <fullName>Approved_GSA_Conferences</fullName>
        <columns>NAME</columns>
        <columns>Conference_Site__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_GSA_Sponsored_Conference</value>
        </filters>
        <filters>
            <field>EA_Stage__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved GSA Conferences</label>
    </listViews>
    <listViews>
        <fullName>Approved_Regional_Management_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Conference_Site__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Internal_Management_Meeting</value>
        </filters>
        <filters>
            <field>EA_Stage__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Regional Management Meetings</label>
    </listViews>
    <listViews>
        <fullName>Event_Tracker_Deputy_Admin</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>EA_Event_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Stage__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Awards_Ceremony_With_Food</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_GSA_Sponsored_Conference</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.EA_Internal_Management_Meeting</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.Non_GSA_Sponsored_Conference</value>
        </filters>
        <label>Event Tracker-Deputy Admin</label>
        <queue>Event_Tracker_Deputy_Administrator</queue>
    </listViews>
    <listViews>
        <fullName>Event_Tracker_OSC_Approvers_Event_Approval</fullName>
        <filterScope>Queue</filterScope>
        <label>Event Tracker-OSC-Approvers</label>
        <queue>Event_Tracker_OSC_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Approved_Events</fullName>
        <columns>NAME</columns>
        <columns>EA_Event_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Stage__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>EA_Stage__c</field>
            <operation>equals</operation>
            <value>Approved,Waiting for Actuals</value>
        </filters>
        <label>My Approved Events</label>
    </listViews>
    <listViews>
        <fullName>Non_GSA_Sponsored_Conferences</fullName>
        <columns>NAME</columns>
        <columns>Conference_Site__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event_Approval__c.Non_GSA_Sponsored_Conference</value>
        </filters>
        <label>Non GSA Sponsored Conferences</label>
    </listViews>
    <listViews>
        <fullName>Pending_HSSO_Approval</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EA_Event_Name__c</columns>
        <columns>Conference_Site__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Step__c</field>
            <operation>equals</operation>
            <value>HSSO</value>
        </filters>
        <label>Pending HSSO Approval</label>
    </listViews>
    <listViews>
        <fullName>Pending_OAS_Approval</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EA_Event_Name__c</columns>
        <columns>Conference_Site__c</columns>
        <columns>EA_Start_Date__c</columns>
        <columns>EA_End_Date__c</columns>
        <columns>EA_Total_Estimated_Expenses__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Step__c</field>
            <operation>equals</operation>
            <value>OAS</value>
        </filters>
        <filters>
            <field>EA_Stage__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending OAS Approval</label>
    </listViews>
    <nameField>
        <label>Event Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Approvals</pluralLabel>
    <recordTypes>
        <fullName>EA_Awards_Ceremony_With_Food</fullName>
        <active>true</active>
        <description>Use this to request approval for an award ceremony with cost</description>
        <label>Awards Ceremony (With Cost)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EA_GSA_Sponsored_Conference</fullName>
        <active>true</active>
        <description>Use this to submit an approval request for a conference, seminar, summit, etc.</description>
        <label>GSA Sponsored Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>EA_Internal_Management_Meeting</fullName>
        <active>true</active>
        <description>Use this to request approval for a Internal Management Meeting</description>
        <label>Internal Management Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_GSA_Sponsored_Conference</fullName>
        <active>true</active>
        <description>For Conferences that are not sponsored by GSA</description>
        <label>Non GSA Sponsored Conference</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Actuals_For_Revenue_and_Attendees</fullName>
        <active>true</active>
        <description>Actuals for Revenue and Attendees cannot be filled in until the conference or meeting is over.</description>
        <errorConditionFormula>AND(
 OR(
  EA_End_Date__c &gt;= TODAY(),
  AND(
       NOT(ISPICKVAL( EA_Stage__c,&quot;Approved&quot;)), 
       NOT(ISPICKVAL( EA_Stage__c,&quot;Completed&quot;)), 
       NOT(ISPICKVAL( EA_Stage__c,&quot;Waiting for Actuals&quot;))
  )
 ), 
 OR(
       NOT(ISBLANK( EA_Actual_of_GSA_Employees__c )),
       NOT(ISBLANK( EA_Actual_GSA_Contractors__c)),
       NOT(ISBLANK( EA_Actual_Non_GSA_Govt_Employees__c )), 
       NOT(ISBLANK( EA_Actual_Non_GSA_Contractors__c )), 
       NOT(ISBLANK( EA_Actual_Other_Attendees__c )), 
       NOT(ISBLANK( EA_Actual_Registration_Fees_Collected__c )), 
       NOT(ISBLANK( EA_Actual_Grants__c )), 
       NOT(ISBLANK( EA_Actual_Vendor_Fees__c )),
       NOT(ISBLANK( EA_Actual_Other_Revenue__c ))
 )
)</errorConditionFormula>
        <errorMessage>You cannot fill in the actual amounts until the event has ended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>EA_Start_Date__c  &gt;  EA_End_Date__c</errorConditionFormula>
        <errorDisplayField>EA_End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Total_Trvl_cost_cannot_be_neg</fullName>
        <active>true</active>
        <description>Cannot Enter a negative value in this field</description>
        <errorConditionFormula>EA_Estimated_Total_Travel_Cost__c   &lt;= 0</errorConditionFormula>
        <errorDisplayField>EA_Estimated_Total_Travel_Cost__c</errorDisplayField>
        <errorMessage>Estimated Total Travel Cost Cannot be a negative amount or &quot;0&quot;.  Please enter a valid amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_submit_reason_for_State_Other</fullName>
        <active>true</active>
        <description>Validates whether the state chose by the submitter is &quot;other&quot; and if so requires them to enter a reason for choosing.</description>
        <errorConditionFormula>AND( ISPICKVAL(  State__c  ,&quot;Other&quot;) , ISBLANK( Other_State_Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Other_State_Reason__c</errorDisplayField>
        <errorMessage>You must submit a reason for choosing &quot;Other&quot; for the Proposed Location State.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_cannot_be_negative</fullName>
        <active>true</active>
        <description>Will not allow negative number in fields.</description>
        <errorConditionFormula>EA_Est_of_GSA_Attendees_That_Must_Travel__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>EA_Est_of_GSA_Attendees_That_Must_Travel__c</errorDisplayField>
        <errorMessage>Estimated Number of GSA Attendees cannot be a negative number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Est_Revenue_cannot_be_negative</fullName>
        <active>true</active>
        <description>Will not allow negative number in fields.</description>
        <errorConditionFormula>EA_Total_Actual_Revenue__c &lt; 0</errorConditionFormula>
        <errorMessage>Total Estimated Revenuecannot be a negative number. Please Review all estimated Revenue Entriesto determine if any have negative values.  If so, please correct to a positive value or &quot;o&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Expenses_cannot_be_negative_or_0</fullName>
        <active>true</active>
        <description>Will not allow negative number in fields.</description>
        <errorConditionFormula>EA_Total_Estimated_Expenses__c  &lt; 0</errorConditionFormula>
        <errorMessage>Total Estimated Expenses cannot be a zero or a negative number. Please Review all estimated expenses to determine if any have negative values.  If so, please correct to a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trav_End_Date_cant_be_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>EA_Proposed_Travel_Start_Date__c  &gt;   Proposed_Travel_End_Date__c</errorConditionFormula>
        <errorDisplayField>Proposed_Travel_End_Date__c</errorDisplayField>
        <errorMessage>Proposed Travel End Date cannot be before Proposed Travel Start Date.</errorMessage>
    </validationRules>
</CustomObject>